--- a/index.html
+++ b/index.html
@@ -3,46 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Reaves Fan Page</title>
+    <title>Austin Reaves - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to the Austin Reaves Fan Page</h1>
+        <h1>Austin Reaves</h1>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#career">Career</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="about">
+        <section class="intro">
+            <h2>Welcome to the Austin Reaves Fan Page</h2>
+            <p>Austin Reaves is a professional basketball player known for his incredible skills and dedication to the game.</p>
+            <img src="austin-reaves-1.jpg" alt="Austin Reaves in action">
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Austin Reaves Fan Page</p>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Austin Reaves</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Austin Reaves</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="bio">
             <h2>About Austin Reaves</h2>
-            <p>Austin Reaves is an American professional basketball player who currently plays for the Los Angeles Lakers in the NBA. He played college basketball for the Wichita State Shockers and the Oklahoma Sooners.</p>
-        </section>
-        <section id="career">
-            <h2>Career Highlights</h2>
-            <ul>
-                <li>Joined the Los Angeles Lakers in 2021</li>
-                <li>Named to the All-Big 12 First Team in 2021</li>
-                <li>Averaged 18.3 points per game in his senior year at Oklahoma</li>
-            </ul>
-        </section>
-        <section id="gallery">
-            <h2>Gallery</h2>
-            <img src="austin_reaves1.jpg" alt="Austin Reaves in action">
-            <img src="austin_reaves2.jpg" alt="Austin Reaves posing">
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>For more information, you can follow Austin Reaves on his social media channels:</p>
-            <ul>
-                <li><a href="https://twitter.com/austin_reaves">Twitter</a></li>
-                <li><a href="https://instagram.com/austin_reaves">Instagram</a></li>
-            </ul>
+            <p>Austin Reaves is a professional basketball player who currently plays for the Los Angeles Lakers in the NBA. He played college basketball for the Wichita State Shockers and the Oklahoma Sooners.</p>
+            <img src="austin-reaves-2.jpg" alt="Austin Reaves during a game">
         </section>
     </main>
     <footer>
