--- a/index.html
+++ b/index.html
@@ -3,58 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Reaves - Home</title>
+    <title>Martin Luther King Jr.</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Austin Reaves</h1>
+        <h1>Martin Luther King Jr.</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="#biography">Biography</a></li>
+                <li><a href="#photos">Photos</a></li>
+                <li><a href="#quotes">Quotes</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="intro">
-            <h2>Welcome to the Austin Reaves Fan Page</h2>
-            <p>Austin Reaves is a professional basketball player known for his incredible skills and dedication to the game.</p>
-            <img src="austin-reaves-1.jpg" alt="Austin Reaves in action">
-        </section>
-    </main>
+
+    <section id="biography">
+        <h2>Biography</h2>
+        <p>Martin Luther King Jr. was an American Baptist minister and activist who became the most visible spokesperson and leader in the civil rights movement from 1955 until his assassination in 1968. Born in Atlanta, Georgia, King is best known for advancing civil rights through nonviolence and civil disobedience, inspired by his Christian beliefs and the nonviolent activism of Mahatma Gandhi.</p>
+    </section>
+
+    <section id="photos">
+        <h2>Photos</h2>
+        <div class="photo-gallery">
+            <img src="https://via.placeholder.com/200" alt="Martin Luther King Jr. speaking">
+            <img src="https://via.placeholder.com/200" alt="Martin Luther King Jr. marching">
+            <img src="https://via.placeholder.com/200" alt="Martin Luther King Jr. with supporters">
+        </div>
+    </section>
+
+    <section id="quotes">
+        <h2>Quotes</h2>
+        <blockquote>"I have a dream that my four little children will one day live in a nation where they will not be judged by the color of their skin, but by the content of their character."</blockquote>
+        <blockquote>"Injustice anywhere is a threat to justice everywhere."</blockquote>
+        <blockquote>"The time is always right to do what is right."</blockquote>
+    </section>
+
     <footer>
-        <p>&copy; 2024 Austin Reaves Fan Page</p>
-    </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Austin Reaves</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Austin Reaves</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="bio">
-            <h2>About Austin Reaves</h2>
-            <p>Austin Reaves is a professional basketball player who currently plays for the Los Angeles Lakers in the NBA. He played college basketball for the Wichita State Shockers and the Oklahoma Sooners.</p>
-            <img src="austin-reaves-2.jpg" alt="Austin Reaves during a game">
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Austin Reaves Fan Page</p>
+        <p>&copy; 2024 MLK Tribute</p>
     </footer>
 </body>
 </html>
