--- a/index.html
+++ b/index.html
@@ -1,148 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<div class="col-md-8">
-      <div class="well">
-	<title>Tribute to Dr Martin Luther King Junior</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</div>
-</div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Austin Reaves Fan Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1> Dr Martin Luther King Jr
-</h1>
-<h2> Civil Rights Activist (1929–1968)
-</h2>
-<div class="container-fluid">
-	 <div class="jumbotron">
-	 	 <div class="row">
-	 	 	<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-
-    	
-<img style="margin:0px auto;display:block" src="https://i.imgur.com/7CUKVtU.gif" alt="source: imgur.com" class="centerimage" height="500" width="700" /></a></div>
-<p class="mainheading" id="main"> <figcaption>Martin Luther King Jr. was a Baptist minister and social activist, who led the Civil Rights Movement in the United States from the mid-1950s until his death by assassination in 1968.</figcaption>
-</p>
-</div>
-</div>
-
- <div class="col-md-8">
- 	<h3>Here's a time line of Dr Martin Luther King Jr :</h3>
- </div>
-
-<ul>
-
-<li>	
-<strong><u>1929</u></strong> 
-	Martin luther King jnr was born in Atlanta, Georgia, to the Reverend Martin Luther King, Sr. and Alberta Williams King.Young Martin had an older sister, Willie Christine, and a younger brother, Alfred Daniel Williams King. The King children grew up in a secure and loving environment.
-</li>
-
-<li>
-<strong><u>1944 </u></strong> 
-Growing up in Atlanta, Georgia, young Martin entered public school at age 5 and Graduated from Booker T. Washington High School and was admitted to Morehouse College at age 15.
-</li>
-
-
-<li>
-	<strong><u>1948 </u></strong> King is ordained and0 becomes assistant pastor at Ebenezer Baptist Church in Atlanta, his father’s church.King also graduates from Morehouse College with bachelor’s degree in sociology.
-</li>
-
-<li><strong><u>1948 </u></strong> Receives degree from Crozer Theological Seminary (Chester, Pa.), enrolls in Boston University Ph.D program.</li>
-
-<li>
-	<strong><u>1955</u></strong> 
-  Received Doctorate of Philosophy in Systematic Theology from Boston University, Boston, Massachusetts on June 5, 1955,Dissertation Title: <cite>A Comparison of the Conception of God in the Thinking of Paul Tillich and Henry Nelson Weiman.</cite>
-Joins the bus boycott after Rosa Parks was arrested on December 1. 
-On December 5, he is elected president of the Montgomery Improvement Association, making him the official spokesperson for the boycott.</li>
-
-<li>
-	<strong><u>1956 </u></strong>  On November 13, the Supreme Court rules that bus segregation is illegal, ensuring victory for the boycott.
-King’s home is bombed while he is speaking at a meeting. His wife and daughter are unharmed.</li>
-
-
-<li> <strong><u>1957 </u></strong> 
-King forms the Southern Christian Leadership Conference to fight segregation and achieve civil rights. On May 17,Dr. King speaks to a crowd of 15,000 in Washington, D.C. King delivers his first national address, "Give Us The Ballot," at the Prayer Pilgrimage for Freedom.
-</li>
-
-
-<li>
-	<strong><u>1958 </u></strong> The U.S. Congress passed the first Civil Rights Act since reconstruction
-King’s first book, Stride Toward Freedom, is published.At a book signing in Harlem, King is stabbed with a letter opener  by a mentally ill woman. Doctors remove the seven-inch blade from his chest.Met with President Dwight D. Eisenhower, along with Roy Wilkins, A. Philip Randolph, and Lester Grange on problems affecting black Americans.
-</li>
-
-
-<li><strong><u>1959 </u></strong>  Visited India to study Mohandas Gandhi’s philosophy of nonviolence.
-Resigns as pastor from the Dexter Avenue Baptist Church to concentrate on civil rights full time.He moves to Atlanta to direct the activities of the Southern Christian Leadership Conference.
- </li>
-
-
-<li><strong><u>1963 </u></strong> On Good Friday, April 12, King is arrested with Ralph Abernathy by Police Commissioner Eugene “Bull” Connor for demonstrating without a permit.
-On April 13, the Birmingham campaign is launched. This would prove to be the turning point in the war to end segregation in the South.During the eleven days he spent in jail, MLK writes his famous Letter from a Birmingham Jail.
-On May 10, the Birmingham Agreement is announced. The stores, restaurants, and schools will be desegregated, hiring of blacks implemented, and charges dropped.
-June 23, MLK leads 125,000 people on a Freedom Walk in Detroit.
-August 28, King delivers his “I Have a Dream” speech at the Lincoln Memorial as more than 200,000 demonstrators take part in the March on Washington for Jobs and Freedom.Four girls are killed when a bomb explodes at the 16th Street Baptist Church in Birmingham.King delivers eulogy for three of the slain girls.
-On November 22, President Kennedy is assassinated<div></div>
-<div>
-	<figure>
-	<a href="https://imgur.com/N0YsSl4"><img src="https://i.imgur.com/N0YsSl4.jpg" title="source: imgur.com" id="dream" alt="i have a dream" width="700" height="375" /></a>
-	<br><figcaption>Martin Luther King giving his famous "i have a dream" Speech</figcaption>
-</figure>
-</div>
-<div></div>
-
- </li>
-
-
-<li> <strong><u>1964</u></strong> On January 3, King appears on the cover of Time magazine as its Man of the Year.
-King attends the signing ceremony of the Civil Rights Act of 1964 at the White House on July 2.<div></div>
-<div class="your-centered-div">
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/obDkKhraAiQ?rel=0&amp;start=6" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</div>
-<div class="new"
-During the summer, King experiences his first hurtful rejection by black people when he is stoned by Black Muslims in Harlem.King is awarded the Nobel Peace Prize on December 10.Dr. King is the youngest person to be awarded the Nobel Peace Prize at age 35.</div>
- </li>
-<div class="1967">
-
-<li><strong><u>1967</u></strong>
-The Supreme Court upholds a conviction of MLK by a Birmingham court for demonstrating without a permit. King spends four days in a Birmingham jail.
-On November 27, King announces the inception of the Poor People’s Campaign focusing on jobs and freedom for the poor of all races.<div></div>
-Dr. King marches in support of sanitation workers on strike in Memphis, Tennessee.
-On March 28, King lead a march that turns violent. This was the first time one of his events had turned violent.
-Delivered I’ve Been to the Mountaintop speech.
-King announces that the Poor People’s Campaign will culminate in a March on Washington demanding a $12 billion Economic Bill of Rights guaranteeing employment to the able-bodied, income to those unable to work, and an end to housing discrimination. 
- </li>
-</div>
-
-<div class="1968">
-	<div></div>
-		
-<div></div>
-
-<li><strong><u>1968</u></strong> At sunset on April 4, Martin Luther King, Jr. is fatally shot while standing on the balcony of the Lorraine Motel in Memphis, Tennessee.
-There are riots and disturbances in 130 American cities. There were twenty thousand arrests.<div></div>
-King’s funeral on April 9 is an international event. Within a week of the assassination, the Open Housing Act is passed by Congress. 
-<figure><a href="https://imgur.com/JqR50MA"><img src="https://i.imgur.com/JqR50MA.jpg" title="source: imgur.com" alt="martin luther king funeral" /></a>
-	<figcaption>Martin Luther King Jr.’s funeral.</figcaption>
-</figure><div></div> 
- </li>
-</div>
-
-
- </ul>
-
-
-</div>
-   <div>
-   	<blockquote class="article-quotebox"><strong>"Intelligence plus character - that is the goal of true education,"</strong>
-<p class="blockquote-writer">Martin Luther King Jr</p>
-</blockquote>
-   </div>
- <div>
- 	<p><span class="my text" id="wiki">If you have time, you should read more about this incredible human being on his<a href="https://en.wikipedia.org/wiki/Martin_Luther_King_Jr." target="_blank"> Wikipedia entry.</a></span></p>
-
- </div> 
- <div class="footer">
- 	<footer>Written and coded by <a href="https://codepen.io/wanyutu/" target="_blank">John Wanyutu</a></footer>
- </div> 
- </div>
+    <header>
+        <h1>Austin Reaves</h1>
+    </header>
+    <main>
+        <section class="intro">
+            <h2>About Austin Reaves</h2>
+            <p>Austin Reaves is an American professional basketball player. He currently plays for the Los Angeles Lakers in the NBA.</p>
+        </section>
+        <section class="gallery">
+            <h2>Photo Gallery</h2>
+            <div class="photos">
+                <img src="photo1.jpg" alt="Austin Reaves Photo 1">
+                <img src="photo2.jpg" alt="Austin Reaves Photo 2">
+                <img src="photo3.jpg" alt="Austin Reaves Photo 3">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Austin Reaves Fan Page</p>
+    </footer>
 </body>
-</>
+</html>
