--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="gallery">
             <h2>Photo Gallery</h2>
             <div class="photos">
-                <img src="photo1.jpg" alt="Austin Reaves Photo 1">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nba.com%2Flakers%2Fteam%2Fplayer-pages%2Faustin-reaves-1630559&psig=AOvVaw33wkBk_S85V9vIdhjJOkDy&ust=1722709335159000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCClMH21ocDFQAAAAAdAAAAABAE" alt="Austin Reaves Photo 1">
                 <img src="photo2.jpg" alt="Austin Reaves Photo 2">
                 <img src="photo3.jpg" alt="Austin Reaves Photo 3">
             </div>
