--- a/index.html
+++ b/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Reaves Fan Page</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Nutrition Label</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+  <link href="./styles.css" rel="stylesheet">
 </head>
+
 <body>
+  <div class="label">
     <header>
-        <h1>Austin Reaves</h1>
+      <h1 class="bold">Nutrition Facts</h1>
+      <div class="divider"></div>
+      <p>8 servings per container</p>
+      <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
     </header>
-    <main>
-        <section class="intro">
-            <h2>About Austin Reaves</h2>
-            <p>Austin Reaves is an American professional basketball player. He currently plays for the Los Angeles Lakers in the NBA.</p>
-        </section>
-        <section class="gallery">
-            <h2>Photo Gallery</h2>
-            <div class="photos">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nba.com%2Flakers%2Fteam%2Fplayer-pages%2Faustin-reaves-1630559&psig=AOvVaw33wkBk_S85V9vIdhjJOkDy&ust=1722709335159000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCClMH21ocDFQAAAAAdAAAAABAE" alt="Austin Reaves Photo 1">
-                <img src="photo2.jpg" alt="Austin Reaves Photo 2">
-                <img src="photo3.jpg" alt="Austin Reaves Photo 3">
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Austin Reaves Fan Page</p>
-    </footer>
+    <div class="divider large"></div>
+    <div class="calories-info">
+      <div class="left-container">
+        <h2 class="bold small-text">Amount per serving</h2>
+        <p>Calories</p>
+      </div>
+      <span>230</span>
+    </div>
+    <div class="divider medium"></div>
+    <div class="daily-value small-text">
+      <p class="bold right no-divider">% Daily Value *</p>
+      <div class="divider"></div>
+      <p><span><span class="bold">Total Fat</span> 8g</span> <span class="bold">10%</span></p>
+      <p class="indent no-divider">Saturated Fat 1g <span class="bold">5%</span></p>
+      <div class="divider"></div>
+      <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
+      <div class="divider"></div>
+      <p><span><span class="bold">Cholesterol</span> 0mg</span> <span class="bold">0%</span></p>
+      <p><span><span class="bold">Sodium</span> 160mg</span> <span class="bold">7%</span></p>
+      <p><span><span class="bold">Total Carbohydrate</span> 37g</span> <span class="bold">13%</span></p>
+      <p class="indent no-divider">Dietary Fiber 4g</p>
+      <div class="divider"></div>
+      <p class="indent no-divider">Total Sugars 12g</p>
+      <div class="divider double-indent"></div>
+      <p class="double-indent no-divider">Includes 10g Added Sugars <span class="bold">20%</span></p>
+      <div class="divider"></div>
+      <p class="no-divider"><span><span class="bold">Protein</span> 3g</span></p>
+      <div class="divider large"></div>
+      <p>Vitamin D 2mcg <span>10%</span></p>
+      <p>Calcium 260mg <span>20%</span></p>
+      <p>Iron 8mg <span>45%</span></p>
+      <p class="no-divider">Potassium 235mg <span>6%</span></p>
+    </div>
+    <div class="divider medium"></div>
+    <p class="note">* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily
+      diet. 2,000 calories a day is used for general nutrition advice.</p>
+  </div>
 </body>
 </html>
