--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Nutrition Label</title>
+  <title>What is Inside of Austin Reaves?</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800"">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,9 +11,15 @@
 <body>
   <div class="label">
     <header>
-      <h1 class="bold">Nutrition Facts</h1>
+      <h1 class="bold">Austin Reaves</h1>
       <div class="divider"></div>
-      <p>8 servings per container</p>
+      <p>Nationality: United States United States
+
+Team: Los Angeles Lakers
+
+Jersey: #15
+
+Position: SG / PG</p>
       <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
     </header>
     <div class="divider large"></div>
