--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
     <header>
       <h1 class="bold">Austin Reaves</h1>
       <div class="divider"></div>
-      <p>Nationality: United States United States
-
-Team: Los Angeles Lakers
-
-Jersey: #15
-
-Position: SG / PG</p>
-      <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
+      <p>AKA (AR-15)</p>
+ <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
     </header>
     <div class="divider large"></div>
     <div class="calories-info">
