--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="bold">Austin Reaves</h1>
       <div class="divider"></div>
       <p>AKA (AR-15)</p>
- <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
+ <p class="bold">Serving size <span>15.9 points (5.5 assists and 4.3 rebounds)</span></p>
     </header>
     <div class="divider large"></div>
     <div class="calories-info">
