--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>What is Inside of Austin Reaves?</title>
+  <title>Wynter Medford</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800"">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,10 +11,10 @@
 <body>
   <div class="label">
     <header>
-      <h1 class="bold">Austin Reaves</h1>
+      <h1 class="bold">Wynter Medford</h1>
       <div class="divider"></div>
-      <p>AKA (AR-15)</p>
- <p class="bold">Serving size <span>15.9 points (5.5 assists and 4.3 rebounds)</span></p>
+      <p>AKA Wynta Meddy</p>
+ <p class="bold"> attributes <span>Humor (Smarts and Althetics)</span></p>
     </header>
     <div class="divider large"></div>
     <div class="calories-info">
