--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="bold">Wynter Medford</h1>
       <div class="divider"></div>
       <p>AKA Wynta Meddy</p>
- <p class="bold"> attributes <span>Humor (Smarts and Althetics)</span></p>
+ <p class="bold"> attributes = <span>Humor, Smarts, and Althetics)</span></p>
     </header>
     <div class="divider large"></div>
     <div class="calories-info">
