--- a/index.html
+++ b/index.html
@@ -1,57 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Wynter Medford</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800"">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wynter Medford</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div class="label">
     <header>
-      <h1 class="bold">Wynter Medford</h1>
-      <div class="divider"></div>
-      <p>AKA Wynta Meddy</p>
- <p class="bold"> attributes = <span>Humor, Smarts, and Althetics)</span></p>
+        <h1>Wynter Medford</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#interests">Interests</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="divider large"></div>
-    <div class="calories-info">
-      <div class="left-container">
-        <h2 class="bold small-text">Amount per serving</h2>
-        <p>Calories</p>
-      </div>
-      <span>230</span>
-    </div>
-    <div class="divider medium"></div>
-    <div class="daily-value small-text">
-      <p class="bold right no-divider">% Daily Value *</p>
-      <div class="divider"></div>
-      <p><span><span class="bold">Total Fat</span> 8g</span> <span class="bold">10%</span></p>
-      <p class="indent no-divider">Saturated Fat 1g <span class="bold">5%</span></p>
-      <div class="divider"></div>
-      <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
-      <div class="divider"></div>
-      <p><span><span class="bold">Cholesterol</span> 0mg</span> <span class="bold">0%</span></p>
-      <p><span><span class="bold">Sodium</span> 160mg</span> <span class="bold">7%</span></p>
-      <p><span><span class="bold">Total Carbohydrate</span> 37g</span> <span class="bold">13%</span></p>
-      <p class="indent no-divider">Dietary Fiber 4g</p>
-      <div class="divider"></div>
-      <p class="indent no-divider">Total Sugars 12g</p>
-      <div class="divider double-indent"></div>
-      <p class="double-indent no-divider">Includes 10g Added Sugars <span class="bold">20%</span></p>
-      <div class="divider"></div>
-      <p class="no-divider"><span><span class="bold">Protein</span> 3g</span></p>
-      <div class="divider large"></div>
-      <p>Vitamin D 2mcg <span>10%</span></p>
-      <p>Calcium 260mg <span>20%</span></p>
-      <p>Iron 8mg <span>45%</span></p>
-      <p class="no-divider">Potassium 235mg <span>6%</span></p>
-    </div>
-    <div class="divider medium"></div>
-    <p class="note">* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily
-      diet. 2,000 calories a day is used for general nutrition advice.</p>
-  </div>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hi, I'm Wynter Medford! I'm a 14-year-old who loves playing basketball. I'm known for being smart and funny. Welcome to my personal website!</p>
+        </section>
+        <section id="interests">
+            <h2>Interests</h2>
+            <p>Besides basketball, I'm interested in baseball, coding, and Massimo Electric bikes. I'm always eager to learn new things and challenge myself.</p>
+        </section>
+    </main>
+    <footer>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>You can reach me at <a href="mailto:wynter@example.com">wynter@example.com</a>.</p>
+        </section>
+        <p>&copy; 2024 Wynter Medford</p>
+    </footer>
 </body>
 </html>
+
