--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm Wynter Medford! I'm a 14-year-old who loves playing basketball. I'm known for being smart and funny. Welcome to my personal website!</p>
+            <p>Hi, I'm Wynter Medford! I'm a 14-year-old who loves playing basketball. I'm known for being smart, funny, energetic, and athletic. Welcome to my personal website!</p>
         </section>
         <section id="interests">
             <h2>Interests</h2>
-            <p>Besides basketball, I'm interested in baseball, coding, and Massimo Electric bikes. I'm always eager to learn new things and challenge myself.</p>
+            <p>Besides basketball, I'm interested in baseball, coding, and Electric bikes. I'm always eager to learn new things and challenge myself.</p>
         </section>
     </main>
     <footer>
