--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:wynter@example.com">wynter@example.com</a>.</p>
+            <p>You can reach me at <a href="mailto:wynter.medford@hgs.hiddengeniusproject.org">wynter.medford@hgs.hiddengeniusproject.org</a>.</p>
         </section>
         <p>&copy; 2024 Wynter Medford</p>
     </footer>
