--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Wynter Medford</h1>
+        <h1>Tha Man Wynter Medford</h1>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
